# govee-remote

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  run.py
data/: ip.txt  kelvin_rgb.yaml
govee_remote/: __init__.py  __main__.py  client.py  color.py  gui.py
